syntax = "proto3";
package rpc;

import "google/protobuf/timestamp.proto";

message ServicePing {
  // UUIDv4 in URN form
  string serviceId = 1;

  enum ServiceStatus {
    UNKNOWN = 0;
    DOWN = 1;
    GOING_UP = 2;
    UP = 3;
    GOING_DOWN = 4;
  }
  ServiceStatus status = 2;

  google.protobuf.Timestamp timestamp = 3;
}

message Empty {

}

service Upmon {
  rpc SendServicePing(ServicePing) returns (Empty);
}
